objects/SPWR_Financial_Offering__c.object
<CustomObject>
    <fields>
        <fullName>Financial_Offering__c</fullName>
        <label>Financial Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>New Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Financial Offering</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sector__c</columns>
        <columns>State__c</columns>
        <columns>Financial_Offering__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SPWR Financial Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>